--- a/styles.css
+++ b/styles.css
@@ -129,74 +129,17 @@ html {
     margin-bottom: 10px; /* Espacio debajo de cada fila (si hay) */
 }
 
-
-footer {
-    margin-top: 40px; /* Espacio encima del footer */
-    padding: 20px; /* Espacio interior del footer */
-    background-color: #f9f9f99a; /* Color de fondo del footer */
-    border-top: 5px solid #190aa5; /* Línea superior gruesa */
-}
-
-.contact {
-    display: flex; /* Muestra los elementos en fila */
-    align-items: center; /* Centra verticalmente los elementos */
-    justify-content: space-between; /* Espacio entre los elementos */
-    margin: 20px 0; /* Espaciado vertical */
-}
-
-.contact-info {
-    flex: 1; /* Ocupa el espacio disponible */
-}
-
-.contact-info h2 {
-    margin-bottom: 20px; /* Espacio debajo del título */
-    font-size: 24px; /* Tamaño de la fuente */
-}
-
-.contact-info ul {
-    list-style-type: none; /* Elimina los puntos de la lista */
-    padding: 0; /* Elimina el padding */
-}
-
-.contact-info li {
-    display: inline; /* Muestra los elementos en línea */
-    margin-right: 15px; /* Espacio entre los botones */
-}
-
-.social-icon {
-    width: 40px; /* Ajusta el tamaño del icono */
-    height: auto; /* Mantiene la proporción del icono */
-    transition: transform 0.3s; /* Efecto de transición para el hover */
-}
-
-.social-icon:hover {
-    transform: scale(1.1); /* Aumenta el tamaño al pasar el mouse */
-}
-
-
-.contact-info a {
-    text-decoration: none; /* Elimina el subrayado */
-    color: #495de4; /* Color del enlace */
-    transition: color 0.3s; /* Transición suave */
-}
-
-.contact-info a:hover {
-    color: #495de4; /* Color al pasar el mouse */
-}
-
-.contact-photo {
-    flex: 0 0 150px; /* Anchura fija para la foto */
-}
-
-.contact-photo img {
-    border: 5px dotted #495de4; /* Borde azul de 5px */
-    border-radius: 10px; /* Opcional: redondea las esquinas del borde */
-    width: 100%; /* Asegura que la imagen se ajuste al contenedor */
-    height: auto; /* Mantiene la proporción de la imagen */
-    border-radius: 50%; /* Hace que la imagen sea circular */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
-}
-
+.alinear-imagen-subtitulo {
+    display: flex;
+    align-items: center; /* Alinea el contenido al centro verticalmente */
+  }
+  
+  .alinear-imagen-subtitulo img {
+    margin-right: 10px; /* Ajusta el espacio entre la imagen y el título */
+    height: auto; /* Permite que la imagen mantenga su proporción */
+    width: 50px; /* Ajusta el tamaño de la imagen a tu preferencia */
+  }
+  
 h1, h2, h3 {
     color: #333;
     font-family: 'Montserrat', sans-serif; /* Aplica Montserrat a los títulos */
